WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201917
WebServiceWorkerProvider::handleFetch() does not need to take in a sessionID
https://bugs.webkit.org/show_bug.cgi?id=201917
Summary
WebServiceWorkerProvider::handleFetch() does not need to take in a sessionID
Chris Dumez
Reported
2019-09-18 09:09:07 PDT
WebServiceWorkerProvider::handleFetch() does not need to take in a sessionID.
Attachments
Patch
(5.08 KB, patch)
2019-09-18 09:09 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-09-18 09:09:40 PDT
Created
attachment 379040
[details]
Patch
Geoffrey Garen
Comment 2
2019-09-18 10:09:23 PDT
Comment on
attachment 379040
[details]
Patch r=me
Chris Dumez
Comment 3
2019-09-18 10:13:34 PDT
Comment on
attachment 379040
[details]
Patch Clearing flags on attachment: 379040 Committed
r250042
: <
https://trac.webkit.org/changeset/250042
>
Chris Dumez
Comment 4
2019-09-18 10:13:35 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-09-18 10:14:17 PDT
<
rdar://problem/55482872
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug