WebServiceWorkerProvider::handleFetch() does not need to take in a sessionID https://bugs.webkit.org/show_bug.cgi?id=201917

Reviewed by Geoffrey Garen.

* WebProcess/Network/WebLoaderStrategy.cpp:
(WebKit::WebLoaderStrategy::scheduleLoad):
* WebProcess/Storage/WebServiceWorkerProvider.cpp:
(WebKit::WebServiceWorkerProvider::handleFetch):
* WebProcess/Storage/WebServiceWorkerProvider.h:

Canonical link: https://commits.webkit.org/215567@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250042 268f45cc-cd09-0410-ab3c-d52691b4dbfc